--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
-    <button class="add-button">Add to home screen</button>
+    <button class="add-button">Install Our App </button>
   </body>
 </html>
