--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
-    <button class="add-button">Install Our App </button>
+    <div class="ourapp">
+<div class="logoimg"><img src="ask.png"/><h1>Ask 3schools</h1></div><button class="appbtn add-button">ℹ Install Our App</button>
+</div>
+    <!--<button class="add-button">Install Our App </button>-->
   </body>
 </html>
