--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       position: fixed;
       background:transparent;
       border:none;
-      top: 0; right: 0;
+      top: 5px; right: 0;
       bottom: 0; left: 0;
       width: 100%;
       height: 100%;
   }
 </style>
-<iframe height="500px" src="https://www.3schools.in"> 
+<iframe height="500px" src="https://ask.3schools.in"> 
 </iframe>
   </body>
 </html>
