--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
+    <style>
+    .add-button{position:fixed;top:0;}
+    </style>
     <button class="add-button">Install Our App </button>
     <style>
       iframe {
       position: fixed;
       background:transparent;
       border:none;
-      top: 5px; right: 0;
+      top: 9px; right: 0;
       bottom: 0; left: 0;
       width: 100%;
       height: 100%;
