--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='https://2.bp.blogspot.com/-pfskLLyd814/YIwSy8TsrzI/AAAAAAAAAlo/r7vWJEfVbaECvhTEquATxOGvouaNuF8PACK4BGAYYCw/s1600/Ask_3schools.in.png' rel='icon' type='image/x-icon'/>
     <title>Ask 3schools</title>
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
