--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
     <button class="add-button">Install Our App </button>
     <style>
-      iframe {
+      .iframe {
       position: fixed;
       background:transparent;
       border:none;
