--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <style>
-    .add-button{position:fixed;top:0;}
+    #add-button{position:fixed;top:5px;}
     </style>
     <button class="add-button">Install Our App </button>
     <style>
