--- a/index.html
+++ b/index.html
@@ -3,27 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <title>Ask 3schools</title>
+    <title>A2HS demo</title>
+    <link href="style.css" rel="stylesheet">
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
-    <style>
-    #add-button{position:fixed;top:5px;}
-    </style>
-    <button class="add-button">Install Our App </button>
-    <style>
-      .iframe {
-      position: fixed;
-      background:transparent;
-      border:none;
-      top: 69px; right: 0;
-      bottom: 0; left: 0;
-      width: 100%;
-      height: 100%;
-  }
-</style>
-<iframe height="5px" src="https://ask.3schools.in"> 
-</iframe>
+    <img src="fox1.jpg" alt="a fox picture">
+    <button class="add-button">Add to home screen</button>
   </body>
 </html>
