--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
-    <img src="fox1.jpg" alt="a fox picture">
+    <img src="ask.png" alt="a fox picture">
     <button class="add-button">Add to home screen</button>
   </body>
 </html>
