--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
-    <img src="ask.png" alt="a fox picture">
-    <button class="add-button">Add to home screen</button>
-  </body>
+    <div class="ourapp">
+<div class="logoimg"><img src="ask.png" alt="ask 3schools"/><h1>Ask 3schools</h1></div><button class="appbtn add-button">ℹ Install Our App</button>
+</div>
+   </body>
 </html>
