--- a/index.html
+++ b/index.html
@@ -3,12 +3,59 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>A2HS demo</title>
+    <title>Ask 3schools</title>
     <link href="style.css" rel="stylesheet">
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
+    <style>
+    *{
+box-sizing:border-box;
+}
+body{
+margin:0;
+padding:0;
+background-color:#;
+}
+.ourapp {
+background-color:#4dff4d;
+margin:3px 5px;
+border-radius:5px;
+box-shadow:0px 3px 10px #000;
+display:flex;
+}
+.ourapp .logoimg{
+padding:5px;
+width:50%;
+max-height:150px;
+display:flex;
+}
+.ourapp .logoimg img{
+height:50px;
+width:50px;
+}
+.ourapp .logoimg h1{
+font-size:16px;
+color:#ff0080;
+margin-left:5px;
+padding:6px 0px;
+text-shadow:0px 3px 6px #000 ;
+}
+.ourapp .appbtn{
+margin:14px 5px;
+padding:3px 6px;
+background-color:#ff80d5;
+height:36px;
+width:40%;
+border:1px solid #ffff00;
+border-radius:7px;
+box-shadow:1px 5px 10px #8c8c8c;
+}
+.ourapp .appbtn:hover{
+box-shadow:1px 5px 10px #000000 inset;
+}
+    </style>
     <div class="ourapp">
 <div class="logoimg"><img src="ask.png" alt="ask 3schools"/><h1>Ask 3schools</h1></div><button class="appbtn add-button">ℹ Install Our App</button>
 </div>
