--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ margin-left:5px;
 padding:6px 0px;
 text-shadow:0px 3px 6px #000 ;
 }
-.ourapp .appbtn{
+.ourapp .add-button{
 margin:14px 5px;
 padding:3px 6px;
 background-color:#ff80d5;
@@ -51,13 +51,14 @@ width:40%;
 border:1px solid #ffff00;
 border-radius:7px;
 box-shadow:1px 5px 10px #8c8c8c;
+float:right;
 }
-.ourapp .appbtn:hover{
+.ourapp .add-button:hover{
 box-shadow:1px 5px 10px #000000 inset;
 }
     </style>
     <div class="ourapp">
-<div class="logoimg"><img src="ask.png" alt="ask 3schools"/><h1>Ask 3schools</h1></div><button class="appbtn add-button">ℹ Install Our App</button>
+<div class="logoimg"><img src="ask.png" alt="ask 3schools"/><h1>Ask 3schools</h1></div><button class="add-button">ℹ Install Our App</button>
 </div>
    </body>
 </html>
