--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ width:50px;
 .ourapp .logoimg h1{
 font-size:16px;
 color:#ff0080;
-margin-left:5px;
+margin-right:5px;
 padding:6px 0px;
 text-shadow:0px 3px 6px #000 ;
 }
@@ -51,14 +51,14 @@ width:40%;
 border:1px solid #ffff00;
 border-radius:7px;
 box-shadow:1px 5px 10px #8c8c8c;
-float:right;
+align-items:right;
 }
 .ourapp .add-button:hover{
 box-shadow:1px 5px 10px #000000 inset;
 }
     </style>
     <div class="ourapp">
-<div class="logoimg"><img src="ask.png" alt="ask 3schools"/><h1>Ask 3schools</h1></div><button class="add-button">ℹ Install Our App</button>
+<button class="add-button">ℹ Install Our App</button><div class="logoimg"><h1>Ask 3schools</h1><img src="ask.png"/></div>
 </div>
    </body>
 </html>
