--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ box-sizing:border-box;
 body{
 margin:0;
 padding:0;
+background-color:#eee;
 }
 .ourapp {
 background-color:#4dff4d;
@@ -29,7 +30,6 @@ padding:5px;
 width:50%;
 max-height:140px;
 display:flex;
-float:right;
 }
 .ourapp .logoimg img{
 height:35px;
