--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@ padding:5px;
 width:50%;
 max-height:140px;
 display:flex;
-float:right;
 margin-left:46%;
 background-color:#ff0;
 }
@@ -44,6 +43,16 @@ color:#ff0080;
 margin-right:5px;
 padding:0px;
 text-shadow:0px 3px 6px #000 ;
+}
+ .ourapp .add-button{
+margin:3px 2px;
+padding:3px 6px;
+background-color:#ff80d5;
+height:34px;
+width:40%;
+border:1px solid #ffff00;
+border-radius:7px;
+box-shadow:1px 5px 10px #8c8c8c;
 }
     </style>
     <div class="ourapp">
