--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ margin:2px 2px 0px 2px;
 border-radius:5px;
 box-shadow:0px 3px 10px #000;
 padding:0;
+display:inline-block;
 }
 .ourapp .logoimg{
 padding:5px;
