--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ margin:2px 2px 0px 2px;
 border-radius:5px;
 box-shadow:0px 3px 10px #000;
 padding:0;
-display:inline-block;
+display:flex;
 }
 .ourapp .logoimg{
 padding:5px;
@@ -55,9 +55,15 @@ border:1px solid #ffff00;
 border-radius:7px;
 box-shadow:1px 5px 10px #8c8c8c;
 }
+ iframe{
+      width:100%;
+      border:none;
+      height:500px;
+      }
     </style>
     <div class="ourapp">
 <button class="add-button">ℹ Install Our App</button><div class="logoimg"><h1>Ask 3schools</h1><img src="ask.png"/></div>
 </div>
+ <iframe src="https://ask.3schools.in"></iframe>
    </body>
 </html>
