--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ display:flex;
       height:500px;
       }
     </style>
-    <div class="ourapp">
+    <div class="ourapp1">
 <button class="add-button">ℹ Install Our App</button><div class="logoimg"><h1>Ask 3schools</h1><img src="ask.png"/></div>
 </div>
  <iframe src="https://ask.3schools.in"></iframe>
