--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@ display:flex;
       }
     </style>
     <div class="ourapp1">
-<button class="add-button">ℹ Install Our App</button><div class="logoimg"><h1>Ask 3schools</h1><img src="ask.png"/></div>
-</div>
+<button class="add-button">ℹ Install Our App</button> </div>
  <iframe src="https://ask.3schools.in"></iframe>
    </body>
 </html>
