--- a/index.html
+++ b/index.html
@@ -18,44 +18,18 @@ margin:0;
 padding:0;
 background-color:#eee;
 }
-.ourapp .logoimg{
-padding:5px;
-width:50%;
-max-height:140px;
-display:flex;
-margin-left:46%;
-background-color:#ff0;
-}
-.ourapp .logoimg img{
-height:35px;
-width:35px;
-}
-.ourapp .logoimg h1{
-font-size:14px;
-color:#ff0080;
-margin-right:5px;
-padding:0px;
-text-shadow:0px 3px 6px #000 ;
-}
- .ourapp .add-button{
-margin:3px 2px;
-padding:3px 6px;
-background-color:#ff80d5;
-height:34px;
-width:40%;
-border:1px solid #ffff00;
-border-radius:7px;
-box-shadow:1px 5px 6px #8c8c8c;
-display:flex;
-}
- iframe{
-      width:100%;
+     iframe {
+      position: fixed;
+      background:transparent;
       border:none;
-      height:500px;
-      }
+      top:4px; right: 0;
+      bottom: 0; left: 0;
+      width: 100%;
+      height: 100%;
+  }
     </style>
-    <div class="ourapp1">
-<button class="add-button">ℹ Install Our App</button> </div>
+    
+<button class="add-button">ℹ Install Our App</button>
  <iframe src="https://ask.3schools.in"></iframe>
    </body>
 </html>
