--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ background-color:#eee;
   }
     </style>
     
-<button class="add-button">ℹ Install Our App</button>
+<div id="appb"><button class="add-button">ℹ Install Our App</button><button onclick="document.querySelector('#appb').style.display='none'">remove button </button></div>
  <iframe src="https://ask.3schools.in"></iframe>
    </body>
 </html>
