--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ask 3schools</title>
     <link href="style.css" rel="stylesheet">
+    <link href='ask.png' rel='icon' type='image/x-icon'/>
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
   </head>
@@ -22,7 +23,7 @@ background-color:#eee;
       position: fixed;
       background:transparent;
       border:none;
-      top:4px; right: 0;
+      top:12px; right: 0;
       bottom: 0; left: 0;
       width: 100%;
       height: 100%;
