--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@ margin:0;
 padding:0;
 background-color:#eee;
 }
-button{
-display:inline-block;    
-      
-      }
+div button{
+    display:inline-block;
+}
      iframe {
       position: fixed;
       background:transparent;
@@ -34,7 +33,7 @@ display:inline-block;
   }
     </style>
     
-<div id="appb"><button class="add-button">ℹ Install Our App</button><button onclick="document.querySelector('#appb').style.display='none'">remove button </button></div>
+<div id="appb" style="width:400px;"><button class="add-button">ℹ Install Our App</button><button onclick="document.querySelector('#appb').style.display='none'">remove button </button></div>
  <iframe src="https://ask.3schools.in"></iframe>
    </body>
 </html>
