--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@ margin:0;
 padding:0;
 background-color:#eee;
 }
-div button{
-    display:inline-block;
-}
+#appb .rbtn{margin-left:50px;}
      iframe {
       position: fixed;
       background:transparent;
@@ -33,7 +31,7 @@ div button{
   }
     </style>
     
-<div id="appb" style="width:400px;"><button class="add-button">ℹ Install Our App</button><button onclick="document.querySelector('#appb').style.display='none'">remove button </button></div>
+<div id="appb" style="width:400px;"><button class="rbtn" onclick="document.querySelector('#appb').style.display='none'">remove button </button> <button class="add-button">ℹ Install Our App</button> </div>
  <iframe src="https://ask.3schools.in"></iframe>
    </body>
 </html>
