--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ background-color:#eee;
 }
     </style>
     
-<div id="appb" style="width:400px;"><button class="rbtn" onclick="document.querySelector('#appb').style.display='none'">remove button </button> <button class="add-button">ℹ Install Our App</button> </div>
+<div id="appb" style="width:400px;"><button class="rbtn" onclick="document.querySelector('#appb').style.display='none'">remove button </button> <button class="add-buttonw">ℹ Install Our App</button> </div>
  <!--<iframe src="https://ask.3schools.in"></iframe>-->
-    <button type="submit" class="btn" onClick="return false;" >Save</button>
-    <button type="submit" class="btn" onClick="return false;">Publish</button>
+    <button type="submit" class="btn add-button" onClick="return false;" >Save</button>
+    <button type="submit" class="btn" onclick="document.querySelector('#appb').style.display='none'">Publish</button>
     <button class="btn">Back</button>
    </body>
 </html>
