--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ background-color:#eee;
     
 <div id="appb" style="width:400px;"><button class="rbtn" onclick="document.querySelector('#appb').style.display='none'">remove button </button> <button class="add-buttonw">ℹ Install Our App</button> </div>
  <!--<iframe src="https://ask.3schools.in"></iframe>-->
-    <button type="submit" class="btn add-button" onClick="return false;" >Save</button>
+    <div><button type="submit" class="btn add-button" onClick="return false;" >Save</button>
     <button type="submit" class="btn" onclick="document.querySelector('#appb').style.display='none'">Publish</button>
-    <button class="btn">Back</button>
+    </div>
    </body>
 </html>
