--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@ background-color:#eee;
 }
     </style>
     
-<div id="appb" style="width:400px;"><button class="rbtn" onclick="document.querySelector('#appb').style.display='none'">remove button </button> <button class="add-buttonw">ℹ Install Our App</button> </div>
- <!--<iframe src="https://ask.3schools.in"></iframe>-->
-    <div><button type="submit" class="btn add-button" onClick="return false;" >Save</button>
-    <button type="submit" class="btn" onclick="document.querySelector('#appb').style.display='none'">Publish</button>
+<!--<iframe src="https://ask.3schools.in"></iframe>-->
+    <div id="appb"><button type="submit" class="btn add-button">Install Our App</button>
+    <button type="submit" class="btn" onclick="document.querySelector('#appb').style.display='none'">Remove</button>
     </div>
    </body>
 </html>
