--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ background-color:#eee;
       position: fixed;
       background:transparent;
       border:none;
-      top:12px; right: 0;
+      top:0; right: 0;
       bottom: 0; left: 0;
       width: 100%;
       height: 100%;
