--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ position:fixed;
 bottom:0;
 left:0;
 right:0;
-padding-top:5px;
+padding:5px;
 background-color:#d1e0e0;
 }
 .appfooter>a{
@@ -103,7 +103,7 @@ display:inline-block;
 }
 .appbody>span{
 color:#ff3385;
-margin:1px 1px 3px 13px;
+margin:1px 1px 3px 3px;
 }
 </style>
 <div class="ourapp">
