--- a/index.html
+++ b/index.html
@@ -1,35 +1,15 @@
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    
-    <link href='ask.png' rel='icon' type='image/x-icon'/>
-   <!--<style type="text/css">
-.iframe {
-      position: fixed;
-      background:#ff0;
-      border:none;
-      top:0; right: 0;
-      bottom: 0; left: 0;
-      width: 100%;
-      height: 100%;
-  }
-</style>
-
-<div id="appb"><button>Install our app</button> <button onclick="document.querySelector('#appb').style.display='none'; document.querySelector('#iframe').classList.add('iframe')">remove button</button></div>
-<div id="iframe">they're the</div>
-<script>
-
-
-</script>
-
--->
-
-
 <!DOCTYPE html>
 <html>
 <head>
-<title>Ask 3schools</title>
-</head>
+<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ask 3schools</title>
+    <link href="style.css" rel="stylesheet">
+    <link href='ask.png' rel='icon' type='image/x-icon'/>
+    <script src="index.js" defer></script>
+    <link rel="manifest" href="manifest.webmanifest">
+  </head>
 <body>
 <style type="text/css">
 *{
