--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ margin:1px 1px 3px 3px;
 }
 </style>
 <div class="ourapp">
-<button class="appbtn">ℹ Install Our App</button><div class="logoimg"><h1>Ask 3schools</h1><img src="ask4.jpg"/></div>
+<button class="appbtn add-button">ℹ Install Our App</button><div class="logoimg"><h1>Ask 3schools</h1><img src="ask4.jpg"/></div>
 </div>
 <div class="ourapp appbody">
 <h2>1> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
