--- a/index.html
+++ b/index.html
@@ -84,10 +84,19 @@ display:inline-block;
 color:#ff3385;
 margin:1px 1px 3px 3px;
 }
+.iframe {
+      position: fixed;
+      background:transparent;
+      border:none;
+      top:0; right: 0;
+      bottom: 0; left: 0;
+      width: 100%;
+      height: 100%;
+  }
 </style>
-<div class="ourapp">
-<button class="appbtn add-button">ℹ Install Our App</button><div class="logoimg"><h1>Ask 3schools</h1><img src="ask4.jpg"/></div>
-</div>
+<div id="appb" class="ourapp"><button type="submit" class="btn add-button">Install Our App</button>
+    <button type="submit" class="btn" onclick="document.querySelector('#appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">Remove</button>
+ </div>
 <div class="ourapp appbody">
 <h2>1> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
 </div>
@@ -118,6 +127,7 @@ margin:1px 1px 3px 3px;
 <div class="ourapp appbody">
 <h2>10> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
 </div>
+<iframe id="iframe" src="https://ask.3schools.in"></iframe>
 <div class="ourapp appfooter">
 <a href="#">ℹ</a><a href="#" >📩</a><a href="#">🏠</a><a href="#" >📗</a><a href="#" >⏰</a>
 </div>
