--- a/index.html
+++ b/index.html
@@ -93,9 +93,13 @@ margin:1px 1px 3px 3px;
       width: 100%;
       height: 100%;
   }
+.btn{
+   float:left;
+   margin-left:9px;
+}
 </style>
-<div id="appb" class="ourapp"><button type="submit" class="btn add-button">Install Our App</button>
-    <button type="submit" class="btn" onclick="document.querySelector('#appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">Remove</button>
+<div id="appb" class="ourapp appb"><button type="submit" class="btn add-button">Install Our App</button>
+    <button type="submit" class="btn" onclick="document.querySelector('.appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">Remove</button>
  </div>
 <div class="ourapp appbody">
 <h2>1> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
@@ -128,7 +132,7 @@ margin:1px 1px 3px 3px;
 <h2>10> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
 </div>
 <iframe id="iframe" src="https://ask.3schools.in"></iframe>
-<div class="ourapp appfooter">
+<div class="ourapp appfooter appb">
 <a href="#">ℹ</a><a href="#" >📩</a><a href="#">🏠</a><a href="#" >📗</a><a href="#" >⏰</a>
 </div>
 </body>
