--- a/index.html
+++ b/index.html
@@ -57,20 +57,6 @@ box-shadow:1px 5px 10px #8c8c8c;
 .appbtn:hover{
 box-shadow:1px 5px 10px #000000 inset;
 }
-.appfooter{
-position:fixed;
-bottom:0;
-left:0;
-right:0;
-padding:5px;
-background-color:#d1e0e0;
-}
-.appfooter>a{
-font-size:28px;
-margin-left:18px;
-margin-right:17px;
-text-decoration:none;
-}
 .appbody{
 margin-top:9px;
 padding:1px 9px;
@@ -100,7 +86,7 @@ margin:1px 1px 3px 3px;
 }
 </style>
 <div id="appb" class="ourapp appb"><button type="submit" class="btn add-button appbtn">Install Our App</button>
-    <button type="submit" class="btn appbtn" onclick="document.querySelector('.appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">Remove</button>
+    <button type="submit" class="btn appbtn" onclick="document.querySelector('.appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">🏠 Home Page</button>
  </div>
 <div class="ourapp appbody">
 <h2>1> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
