--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ margin:1px 1px 3px 3px;
       bottom: 0; left: 0;
       width: 100%;
       height: 100%;
-     display:block;
+     display:block!important;
   }
 .btn{
    float:left;
