--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,33 +16,16 @@ box-sizing:border-box;
 body{
 margin:0;
 padding:0;
-background-color:#;
+background-color:#d1d1e0;
 }
 .ourapp {
 background-color:#4dff4d;
 margin:2px 2px 0px 2px;
 border-radius:5px;
-box-shadow:0px 3px 10px #000;
 padding:0;
+border-bottom:1px #000 dotted;
 }
-.ourapp .logoimg{
-padding:5px;
-width:50%;
-max-height:140px;
-display:flex;
-float:right;
-}
-.ourapp .logoimg img{
-height:35px;
-width:35px;
-}
-.ourapp .logoimg h1{
-font-size:14px;
-color:#ff0080;
-margin-right:5px;
-padding:0px;
-text-shadow:0px 3px 6px #000 ;
-}
+
 .appbtn{
 margin:3px 2px;
 padding:3px 6px;
@@ -58,17 +40,18 @@ box-shadow:1px 5px 10px #8c8c8c;
 box-shadow:1px 5px 10px #000000 inset;
 }
 .appbody{
-margin-top:9px;
+margin-top:5px;
 padding:1px 9px;
-box-shadow:none;
+box-shadow:;
+background-color:#f2f2f2;
 }
 .appbody>h2{
 font-size:15px;
 display:inline-block;
+color:#1a1aff;
 }
-.appbody>span{
-color:#ff3385;
-margin:1px 1px 3px 3px;
+.appbody>article{
+margin:0px 1px 2px 1px;
 }
 .iframe {
       position: fixed;
@@ -84,43 +67,51 @@ margin:1px 1px 3px 3px;
    float:left;
    margin-left:9px;
 }
+.a{background-color:#ccffeb;}.b{background-color:#ffffcc; }.c{background-color:#ffcce6; }.d{background-color:#ccb3ff; }.e{background-color:#ffffb3; }
 </style>
-<div id="appb" class="ourapp appb"><button type="submit" class="btn add-button appbtn">Install Our App</button>
+<div id="appb" class=" appb"><button type="submit" class="btn add-button appbtn">Install Our App</button>
     <button type="submit" class="btn appbtn" onclick="document.querySelector('.appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">🏠 Home Page</button>
  </div>
 <div class="ourapp appbody">
-<h2>1> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
+<h2>1> what is the Full Form of ROM ? </h2>
+<article>=> Read Only Memory</article>
 </div>
-<div class="ourapp appbody">
-<h2>2> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
+<div class="ourapp appbody a">
+<h2>2> what is the Full Form of ROM ? </h2>
+<article>=> Read Only Memory</article>
 </div>
-<div class="ourapp appbody">
-<h2>3> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
+<div class="ourapp appbody b">
+<h2>3> what is the Full Form of ROM ? </h2>
+<article>=> Read Only Memory</article>
 </div>
-<div class="ourapp appbody">
-<h2>4> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
+<div class="ourapp appbody c">
+<h2>4> what is the Full Form of ROM ? </h2>
+<article>=> Read Only Memory</article>
 </div>
-<div class="ourapp appbody">
-<h2>5> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
+<div class="ourapp appbody d">
+<h2>5> what is the Full Form of ROM ? </h2>
+<article>=> Read Only Memory</article>
 </div>
-<div class="ourapp appbody">
-<h2>6> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
+<div class="ourapp appbody e">
+<h2>6> what is the Full Form of ROM ? </h2>
+<article>=> Read Only Memory</article>
 </div>
-<div class="ourapp appbody">
-<h2>7> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
+<div class="ourapp appbody d">
+<h2>7> what is the Full Form of ROM ? </h2>
+<article>=> Read Only Memory</article>
 </div>
-<div class="ourapp appbody">
-<h2>8> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
+<div class="ourapp appbody c">
+<h2>8> what is the Full Form of ROM ? </h2>
+<article>=> Read Only Memory</article>
 </div>
-<div class="ourapp appbody">
-<h2>9> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
+<div class="ourapp appbody a">
+<h2>9> what is the Full Form of ROM ? </h2>
+<article>=> Read Only Memory</article>
 </div>
-<div class="ourapp appbody">
-<h2>10> what is the Full Form of ROM ? </h2><span>13/6/2021</span>
+<div class="ourapp appbody e">
+<h2>10> what is the Full Form of ROM ? </h2>
+<article>=> Read Only Memory</article>
 </div>
 <iframe style="display:none" id="iframe" src="https://ask.3schools.in"></iframe>
-<!--<div class="ourapp appfooter appb">
-<a href="#">ℹ</a><a href="#" >📩</a><a href="#">🏠</a><a href="#" >📗</a><a href="#" >⏰</a>
-</div>-->
 </body>
 </html>
