--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ box-shadow:1px 5px 10px #000000 inset;
 .appbody{
 margin-top:5px;
 padding:1px 9px;
-box-shadow:;
+display:inline-block;
 background-color:#f2f2f2;
 }
 .appbody>h2{
