--- a/index.html
+++ b/index.html
@@ -77,44 +77,66 @@ margin:0px 1px 2px 1px;
     <button type="submit" class="btn appbtn" onclick="document.querySelector('.appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">🏠 Home Page</button>
  </div>
 <div class="ourapp appbody">
-<h2>1> what is the Full Form of ROM ? </h2>
-<article>=> Read Only Memory</article>
+<h2>1> বাংলার আকবর কাকে বলা হয় ?  </h2>
+<article>=> আলাউদ্দিন হোসেন শাহকে।</article>
 </div>
 <div class="ourapp appbody a">
-<h2>2> what is the Full Form of ROM ? </h2>
-<article>=> Read Only Memory</article>
+<h2>2> সম্রাট হুমায়ুনের পিতার নাম কি ? </h2>
+<article>=> সম্রাট বাবর।</article>
 </div>
 <div class="ourapp appbody b">
-<h2>3> what is the Full Form of ROM ? </h2>
-<article>=> Read Only Memory</article>
+<h2>3> কোন পাখিকে গায়ক পাখি বলা হয় ?
+
+</h2>
+<article>=> মনিং বার্ডকে গায়ক পাখি বলে।</article>
 </div>
 <div class="ourapp appbody c">
-<h2>4> what is the Full Form of ROM ? </h2>
-<article>=> Read Only Memory</article>
+<h2>4> কোন পাখিকে সমাজের ঝাড়ুদার পাখি বলা হয় ? </h2>
+<article>=> কাককে।</article>
 </div>
 <div class="ourapp appbody d">
-<h2>5> what is the Full Form of ROM ? </h2>
-<article>=> Read Only Memory</article>
+<h2>5> রক্তশূন্যতা দেখে দেয় কিসের অভাবে ? </h2>
+<article>=> আয়রনের অভাবে।</article>
 </div>
 <div class="ourapp appbody e">
-<h2>6> what is the Full Form of ROM ? </h2>
-<article>=> Read Only Memory</article>
+<h2>6> কি খেলে রক্তে হিমোগ্লোবিন বাড়ে ? ? </h2>
+<article>=> বাদাম , কিসমিস, খেজুর ইত্যাদি ।</article>
 </div>
 <div class="ourapp appbody d">
-<h2>7> what is the Full Form of ROM ? </h2>
-<article>=> Read Only Memory</article>
+<h2>7> রিকেটস রোগ হয় কোন ভিটামিনের অভাবে ?</h2>
+<article>=> ভিটামিন ডি এর অভাবে।</article>
 </div>
 <div class="ourapp appbody c">
-<h2>8> what is the Full Form of ROM ? </h2>
-<article>=> Read Only Memory</article>
+<h2>8> ভিটামিন কে এবং কবে আবিষ্কার করেন ? </h2>
+<article>=> ১৯১২ সালে ভিটামিন আবিষ্কার করেন বিজ্ঞানী ক্যাশিমির ফ্রাঙ্ক ।</article>
 </div>
 <div class="ourapp appbody a">
-<h2>9> what is the Full Form of ROM ? </h2>
-<article>=> Read Only Memory</article>
+<h2>9> আম নয়, জাম নয়, গাছে না ফলে তবু সবাই তাকে ফল নাম চেনে। </h2>
+<article>=> পরীক্ষার ফল।</article>
 </div>
 <div class="ourapp appbody e">
-<h2>10> what is the Full Form of ROM ? </h2>
-<article>=> Read Only Memory</article>
+<h2>10>ধাঁধা :- রাত 12 টা সময় কে কার উপর থাকে । </h2>
+<article>=> মিনিটের কাটাটি থাকে ঘণ্টা কাটাটির উপর । </article>
+</div>
+<div class="ourapp appbody">
+<h2>11>ধাঁধা :- কোন জিনিসটা মেয়েদের হাতের ছোঁয়ায় এলে 2 ইঞ্চি থেকে 6 ইঞ্চি হয়ে যায় ।</h2>
+<article>=> উত্তর:-- </article>
+</div>
+<div class="ourapp appbody a">
+<h2>12> “বাবরনামা” কে লিখেছেন ? </h2>
+<article>=> বাবর।</article>
+</div>
+<div class="ourapp appbody b">
+<h2>13> দিল্লিতে কুতুব মিনার কে নির্মাণ করেন ? </h2>
+<article>=> কুতুবউদ্দিন আইবক।</article>
+</div>
+<div class="ourapp appbody c">
+<h2>14> ভারতের তোতাপাখি নামে কে পরিচিত ? </h2>
+<article>=> আমির খসরু ভারতের তোতাপাখি নামে পরিচিত।</article>
+</div>
+<div class="ourapp appbody d">
+<h2>15> LED এর পুরো কথাটি কী ?</h2>
+<article>=> Light-Emitting Diode. </article>
 </div>
 <iframe style="display:none" id="iframe" src="https://ask.3schools.in"></iframe>
 </body>
