--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ box-sizing:border-box;
 body{
 margin:0;
 padding:0;
-background-color:#d1d1e0;
+background-color:#ffffff;
 }
 .ourapp {
 background-color:#4dff4d;
