--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ margin:0px 1px 2px 1px;
     
   }
 </style>
-<div id="appb" class=" appb"><button type="submit" class="btn add-button appbtn">Install Our App</button>
-    <button type="submit" class="btn appbtn" onclick="document.querySelector('.appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">🏠 Home Page</button>
+<div id="appb" class=" appb"><button class="btn add-button appbtn">Install Our App</button>
+    <button class="btn appbtn" onclick="document.querySelector('.appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">🏠 Home Page</button>
  </div>
 <div class="ourapp appbody">
 <h2>1> বাংলার আকবর কাকে বলা হয় ?  </h2>
@@ -138,6 +138,7 @@ margin:0px 1px 2px 1px;
 <h2>15> LED এর পুরো কথাটি কী ?</h2>
 <article>=> Light-Emitting Diode. </article>
 </div>
+    <button class="btn appbtn" onclick="document.querySelector('.appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">Load More</button>
 <iframe style="display:none" id="iframe" src="https://ask.3schools.in"></iframe>
 </body>
 </html>
