--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ margin:0px 1px 2px 1px;
 <h2>15> LED এর পুরো কথাটি কী ?</h2>
 <article>=> Light-Emitting Diode. </article>
 </div>
-    <button class="btn appbtn" onclick="document.querySelector('.appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">Load More</button>
+   <center> <button class="btn appbtn" onclick="document.querySelector('.appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">Load More</button></center>
 <iframe style="display:none" id="iframe" src="https://ask.3schools.in"></iframe>
 </body>
 </html>
