--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ask 3schools</title>
+    <title>Ask</title>
     <link href='ask.png' rel='icon' type='image/x-icon'/>
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
