--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <a href="#" ><button  class="appbtn d">ইতিহাস</button></a>
 <a href="#" ><button  class="appbtn c">ভূগোল</button></a>
 <a href="#" ><button  class="appbtn ourapp">আবিষ্কার ও জনক</button></a>
-<a href="#" ><button  class="appbtn ourapp">ধাঁধা ও উত্তর</button></a>
-<a href="#" ><button  class="appbtn ourapp">ভিটামিন</button></a>
+<a href="#" ><button  class="appbtn e">ধাঁধা ও উত্তর</button></a>
+<a href="#" ><button  class="appbtn b">ভিটামিন</button></a>
 </div>
 <div class="ourapp appbody a">
 <h2>2> সম্রাট হুমায়ুনের পিতার নাম কি ? </h2>
