--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
  <div id="appb" class="appb"><button class="btn add-button appbtn">📱 install our app</button>
     <button class="btn appbtn" onclick="document.querySelector('.appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">🏠 Home Page</button>
- </div>
+ </div><br/>
 <div class="ourapp appbody">
 <img id="ask3schools" height="30px" width="30px" src="ask1.jpg" alt="ask 3schools">
 <h2>1> বাংলার আকবর কাকে বলা হয় ?</h2>
