--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button class="btn appbtn" onclick="document.querySelector('.appb').style.display='none';document.querySelector('#iframe').classList.add('iframe')">🏠 Home Page</button>
  </div><br/>
 <div class="ourapp appbody">
-<img id="ask3schools" height="30px" width="30px" src="ask1.jpg" alt="ask 3schools">
+<img id="ask3schools" style="height:35px;width:35px;margin:4px;" src="ask1.jpg" alt="ask 3schools">
 <h2>1> বাংলার আকবর কাকে বলা হয় ?</h2>
 <article>=> আলাউদ্দিন হোসেন শাহকে।</article>
 </div>
