--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <article>=> আলাউদ্দিন হোসেন শাহকে।</article>
 </div>
  <div class="appbody">
-<a href="gk.html"><button  class="appbtn a">সাধারণ জ্ঞান </button></a>
-<a href="#" ><button  class="appbtn d">ইতিহাস</button></a>
-<a href="#" ><button  class="appbtn c">ভূগোল</button></a>
-<a href="#" ><button  class="appbtn ourapp">আবিষ্কার ও জনক</button></a>
-<a href="#" ><button  class="appbtn e">ধাঁধা ও উত্তর</button></a>
-<a href="#" ><button  class="appbtn b">ভিটামিন</button></a>
+<a href="gk.html"><button  class="appbtn button a">সাধারণ জ্ঞান </button></a>
+<a href="#" ><button  class="appbtn button d">ইতিহাস</button></a>
+<a href="#" ><button  class="appbtn button e">ভূগোল</button></a>
+<a href="#" ><button  class="appbtn button ourapp">আবিষ্কার ও জনক</button></a>
+<a href="#" ><button  class="appbtn button c">ধাঁধা ও উত্তর</button></a>
+<a href="#" ><button  class="appbtn button b">ভিটামিন</button></a>
 </div>
 <div class="ourapp appbody a">
 <h2>2> সম্রাট হুমায়ুনের পিতার নাম কি ? </h2>
